--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -62,7 +62,7 @@
  .main{
 	@include povh('');
 	min-height: 20vh;
-	margin: 280px 0;
+	margin: 250px 0;
  }
  	.button_group{
  		margin-top: 10px;
@@ -72,14 +72,20 @@
  			color: #fff;
  			margin-bottom: 15px;
  			margin-right: 15px;
- 			padding: 9px;
- 			font-size: 14px;
- 			color: #1974ac;
- 			font-weight: bold;
+ 			padding: 5px 9px;
+ 			font-size: 13px;
+ 			//color: #1974ac;
+ 			//font-weight: bold;
  			text-transform: uppercase;
  			text-decoration: none;
+ 			background:#D4554C;
+ 			border-radius: 4px;
  			&.red{
- 				color: #d95648;
+ 				color: #fff;
+ 				background:#4C8CB8;
+ 			}
+ 			&:hover{
+ 				opacity: 0.9;
  			}
  		}
  		i{
@@ -113,6 +119,7 @@
 			text-transform: uppercase;
 			font-size: 14px;
 			color: #fff;
+			background:	#556076;
 			&:hover{
 				background:#49a9e5;
 			}
