--- a/css/screen.css
+++ b/css/screen.css
@@ -3318,6 +3318,29 @@ textarea {
 }
 
 /*----------end--modal---------------*/
+/*------------inner-pages----------------*/
+.main.main_page {
+  margin: 0;
+}
+
+.bnr img {
+  display: block;
+}
+
+.inner_page_wrap {
+  background: #fff;
+  display: flex;
+}
+
+.sidebar {
+  width: 315px;
+  background: #3d444c;
+}
+
+.content {
+  padding: 20px 0 20px 30px;
+}
+
 @media only screen and (max-width: 1030px) {
   .main {
     margin: 163px 0;
