--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,11 +1,32 @@
 // Normally mainpage styles
  
+ .index_page{
+  background:url(../img/bg.jpg) no-repeat center fixed;
+  background-size: cover;
+ }
+ .wrapper{
+ 	min-height: 100%;
+ 	padding-top: 38px;
+ 	box-sizing: border-box;
+ }
+ h2{
+ 	position: relative;
+ 	font-size: 30px;
+ 	font-weight: 500;
+ 	border-bottom: 2px solid #3d444c;
+ 	margin-bottom: 30px;
+ }
  /*----------header----------*/
 
  .header{
+ 	position: fixed;
+ 	top: 0;
+ 	left: 0;
+ 	right: 0;
 	background:#000;
 	height: 38px;
 	color: #fff;
+	z-index: 50;
  }
  	.head_left{
  		font-size: 14px;
@@ -56,13 +77,22 @@
 	
 /*----------end-header----------*/	
 
+/*----------search----------*/
+.search{
+	position: absolute;
+	top: 30%;
+	left: 0;
+	right: 0;
+}
+/*----------end-search----------*/	
 
 /*----------main----------*/
  
  .main{
-	@include povh('');
+	/*@include povh('');
 	min-height: 20vh;
-	margin: 250px 0;
+	margin: 250px 0;*/
+	position: relative;
  }
  	.button_group{
  		margin-top: 10px;
@@ -128,7 +158,76 @@
 			}
 		}
 	}
-/*----------end main----------*/	
+/*----------end main----------*/
+
+/*----------advertisement----------*/
+.advertisement{
+	position: relative;
+	padding-top: 20px;
+	overflow: hidden;
+}
+	.box{
+		position: relative;
+		background: #f5f5f5;
+		float: left;
+		width: 370px;
+		/*height: 200px;*/
+		padding: 20px;
+		margin-left: 15px;
+		margin-bottom: 15px;
+		box-sizing: border-box;
+	}
+		.box:nth-child(3n+1){
+			margin-left: 0;
+		}
+		.box-head{
+			position: relative;
+			height: 30px;
+			color: #1974ac;
+			font-size: 18px;
+			font-weight: 700;
+			text-transform: uppercase;
+			overflow: hidden;
+		}
+			.box-head a{
+				text-decoration: none;
+			}
+			.box-icon{
+				position: relative;
+				display: inline-block;
+				vertical-align: top;
+				width: 30px;
+			}
+		.box-body{
+			position: relative;
+			height: 90px;
+			font-size: 14px;
+			line-height: 22px;
+			padding-top: 5px;
+			overflow: hidden;
+			box-sizing: border-box;
+		}
+		.box-footer{
+			position: relative;
+			height: 40px;
+			font-size: 14px;
+			line-height: 22px;
+			overflow: hidden;
+		}
+			.box-footer strong{
+				font-weight: 500;
+			}
+			.box-footer a{
+				color: #1974ac;
+				text-decoration: none;
+			}
+				.box-footer a:hover{
+					text-decoration: underline;
+				}
+				.box-footer a .fa{
+					margin-right: 5px;
+				}
+/*----------end advertisement----------*/
 
 	
 /*----------footer----------*/
@@ -177,25 +276,800 @@
 	font-size: 16px;
 	display: none;
 }
+	.popup_modal{
+		width: 796px;
+		background:#e7e6e9;
+		border-radius: 3px;
+		display: none;
+		h3{
+			text-align: center;
+			padding: 30px 0 10px 0;
+		}
+	}
+		.popup_modal_title{
+			background-color: #c4d7f1;
+			color: #000;
+			text-align: center;
+			padding: 22px 0;
+			font-weight: 600;
+			h3{
+				padding: 0;
+				color: #000;
+				font-size: 18px;
+			}
+		}
+			.btn-primary{
+				@extend .btn-default;
+				background:#536177;
+			}
+	.popup_modal_content.container{
+		width: 770px;
+		padding-top: 26px;
+		font-size: 15px;
+		color: #3d3d3d;
+		.row{
+			padding-bottom: 18px;
+			&.no_spaces_row{
+				padding-bottom: 0;
+			}
+			&.radio_row_minus_spases{
+				margin-top: -7px;
+				margin-bottom: -7px;
+			}
+		}
+		img{
+			padding: 0 14px 0 0 ;
+		}
+		input, textarea, select{
+			width: 100%;
+			background:#fff;
+			height: 32px;
+			border-radius: 2px;
+			border: 1px solid #d6d5d7;
+			padding: 0 13px;
+			box-sizing: border-box;
+			font-size: 13px;
+			color: #3d3d3d;
+
+			&[type=date], &.datepicker{
+				width: 95px;
+				padding: 0 10px;
+				vertical-align: top;
+			}
+
+			&.small{
+				width: 50px;
+				height:30px;
+				text-align: center;
+			}
+			&.error{
+				border-color: #eb6869;
+			}
+			&::-webkit-input-placeholder {color: #bbbbbe;}
+			&:-moz-placeholder {color: #bbbbbe;}
+			
+		}
+		.error_text{
+			display: block;
+			color: #eb6869;
+			font-size: 14px;
+			position: absolute;
+		}
+		.btn-feedback{
+			&:hover{
+				background:#5e94d4 ;
+			}
+		}
+		textarea{
+			height: 125px;
+			padding: 10px 13px;
+		}
+		h6{
+			color: #447dc0;
+			font-size: 15px;
+			padding: 0  8px 0 0;
+		}
+		label{
+			font-size: 15px;
+			color: #3d3d3d;
+			position: relative;
+			font-weight: 500;
+			input{
+				position: absolute;
+				left: 0;
+				top: 0;
+				height: 100%;
+				opacity: 0;
+				&:checked + span{
+					&:before{
+						content: "\f046";
+						color: #007ec4;
+					}
+				}
+			}
+
+			span{
+				padding-left: 20px;
+				margin-right: 21px;
+				&:before{
+					content: '';
+					@extend .fa;
+					content: "\f096";
+					position: absolute;
+					left: 2px;
+					top: 3px;
+					
+				}
+			}
+			&.radio{
+				display: inline-block;
+				span:before{
+					content: '';
+					width: 16px;
+					height: 16px;
+					background:url(../img/icons/radio.png) no-repeat bottom center;
+				}
+				input{
+				&:checked + span{
+					&:before{
+						content: "";
+						background-position: top center;
+					}
+				}
+				}
+			}
+		}
+		a{
+			display: inline-block;
+			color: #1974ac;
+			font-size: 14px;
+			font-weight: bold;
+			text-decoration: none;
+			border-bottom: 1px dashed #1974ac;
+		}
+		a.back{
+			border-bottom: none;
+			padding-left: 43px;
+			text-transform: uppercase;
+			line-height: 30px;
+			font-size: 12px;
+			background:url(../img/icons/arrow_link.png) no-repeat left center;
+		}
+		.radio_row{
+			input[type=text]{
+				width: 224px;
+			}
+		}
+		.input_inline{
+			h6, input, select{
+				display: inline-block;
+			}
+		}
+		.psm{
+			border: 1px dashed #bbbbbb;
+			padding: 10px 0;
+			margin: auto 15px;
+			text-align: center;
+			width: auto;
+			float: none;
+			margin-bottom: 22px;
+			a{
+				border: none;
+			}
+		}
+		ul{
+			color: #1baa63;
+			font-size: 15px;
+			font-weight: 500;
+			li{
+				padding-bottom: 12px;
+			}
+		}
+		hr{
+			border-color: #5a5a5a;
+		}
+		b{
+			padding: 0 9px 0 0; 
+		}
+
+		.labels_smaller{
+			label{
+				span{
+					font-size: 15px;
+					margin-right: 10px;
+				}
+			}
+		}
+		.labels_small{
+			label{
+				span{
+					font-size: 15px;
+					margin-right: 0px;
+				}
+			}
+		}
+		.main_popup_form{
+			font-weight: 500;
+			line-height: 30px;
+		}
+
+	}
+	.popup_modal.small{
+		width:483px;
+		.popup_modal_content.container{
+			width: 450px;
+			padding-top: 38px;
+			.row{
+				padding-bottom: 11px;
+			}
+		}
+		b{
+			font-size: 12px;
+			line-height: 1.2;
+			padding-bottom: 5px;
+			display: block;
+			padding: 0 9px 0 0;
+		}
+		table{
+			td{
+				width:33%;
+				vertical-align: middle; 
+				box-sizing: border-box;
+				padding: 0 10px 0 0;
+			}
+			tr{
+				td:last-child{
+					padding: 0;
+				}
+			}
+		}
+	}
+	.tags_modal{
+		position: relative;
+		overflow: hidden;
+		margin-bottom: 33px;
+		a{
+			float: right;
+			height: 120px;
+			width: 25%;
+			color: #000000;
+			font-size: 15px;
+			font-weight: normal;
+			background:#c4d7f1;
+			border: none !important;
+			text-align: center;
+			em{
+				color: #000000;
+				font-size: 15px;
+				font-style: normal;
+				display: block;
+				font-weight: normal;
+				padding-top: 10px;
+			}
+			span{
+				display: table-cell;
+				vertical-align: middle;
+				width: inherit;
+				height: 120px;
+			}
+			img{
+				display: inline-block;
+				filter: brightness(10%);
+			}
+			&:hover{
+				background:#536177;
+				em{
+					color: #fff;
+				}
+				img{
+					//не працює з чорними картинками
+					filter: brightness(100%);
+				}
+			}
+		}
+	}
+	.success{
+		padding: 15px ;
+		font-size: 22px;
+		text-align: center;
+		color: #000;
+		margin: 15px 0;
+		background-color: #c4d7f1;
+	}
+	.input_contacts{
+		padding-bottom: 15px;
+		input{
+			height: 39px !important;
+			padding-left: 64px !important;
+			&.name{
+				background: #fff url(../img/input_bg1.png) no-repeat left center;
+			}
+			&.email{
+				background: #fff url(../img/input_bg2.png) no-repeat left center;
+			}
+			&.tema{
+				background: #fff url(../img/input_bg3.png) no-repeat left center;
+			}
+		}
+		textarea{
+			height: 150px !important; 
+		}
+	}
+	.drop_select{
+		position: relative;
+		&:hover{
+			&:before, &:after{
+				opacity: 1;
+			}
+		}
+		&:before{
+			position: absolute;
+		    content:attr(title);
+		    left:0;
+		    top:35px;
+		    font-size: 11px;
+		    padding: 10px ;
+		    background-color: #bbc5d5;
+		    color:#000;
+		    z-index: 7;
+		    line-height: 1.3;
+		    font-weight: normal;
+		    opacity: 0;
+		}
+		&:after{
+			content: '';
+			position: absolute;
+			top: 28px;
+			left: 20px;
+			@include arr(8,8, #bbc5d5, t);
+			opacity: 0;
+		}
+	}
+	.popup_modal.small .popup_modal_content.container.change_spec{
+		font-weight: 600;
+		font-size: 13px;
+		line-height: 30px;
+	}
+	.popup_modal_content.container .date_wrap{
+		vertical-align: middle;
+		b{
+			font-weight: 500;
+			vertical-align: middle;
+			padding: 0 25px 0 0;
+		}
+		img{
+			vertical-align: middle;
+		}
+	}
 /*----------end--modal---------------*/
 
 /*------------inner-pages----------------*/
-.main.main_page{
-	margin: 0;
-}
 	.bnr{
-		img{
-			display: block;
+		position: relative;
+		height: 150px;
+		background-size: cover;
+		background-position: center;
+		line-height: 0;
+		/*img{
+			width: 100%;
+		}*/
+	}
+	.sidebar{
+		position: absolute;
+		background:#3d444c;
+		left: -230px;
+		top: 0;
+		width: 310px;
+		z-index: 10;
+		-webkit-transition: all 0.5s ease;
+		-moz-transition: all 0.5s ease;
+		-o-transition: all 0.5s ease;
+		transition: all 0.5s ease;
+	}
+		.sidebar.active{
+			left: 0;
+		}
+		.sidebar-head{
+			position: relative;
+			background: #007ec4;
+			padding: 25px 20px 20px;
+			overflow: hidden;
+		}
+			.sidebar-navbar{
+				position: relative;
+				float: right;
+				width: 40px;
+				color: #fff;
+				font-size: 36px;
+				text-align: center;
+				cursor: pointer;
+			}
+		.sidebar-nav{
+			position: relative;
+		}
+			.sidebar-nav ul li{
+				position: relative;
+			}
+				.sidebar-nav ul li a{
+					position: relative;
+					display: table;
+					width: 100%;
+					color: #fff;
+					font-size: 18px;
+					text-decoration: none;
+					padding: 0 20px;
+					box-sizing: border-box;
+				}
+					.sidebar-nav ul li a:hover{
+						background: #525a5f;
+					}
+					.nav-title{
+						position: relative;
+						display: table-cell;
+						vertical-align: middle;
+						height: 55px;
+						padding-left: 60px;
+					}
+					.sidebar-icon{
+						position: relative;
+						display: table-cell;
+						vertical-align: middle;
+						width: 40px;
+						font-size: 36px;
+						text-align: center;
+					}
+	.breadcrumbs{
+		position: relative;
+		padding: 15px 0;
+		overflow: hidden;
+	}
+		.breadcrumbs ul li{
+			position: relative;
+			float: left;
+			color: #787777;
+			line-height: 18px;
+		}
+			.breadcrumbs ul li:before{
+				content: '/';
+				position: relative;
+				margin: 0 5px;
+			}
+				.breadcrumbs ul li:first-child:before{
+					content: none;
+				}
+			.breadcrumbs ul li a{
+				color: #000;
+				text-decoration: none;
+			}
+				.breadcrumbs ul li a:hover{
+					text-decoration: underline;
+				}
+	.content{
+		position: relative;
+		padding: 15px 0;
+	}
+.space_top{
+	margin-top: 28px;
+	
+}
+.space_top_small{
+	margin-top: 8px;
+}
+.space_bottom_row{
+	margin-bottom: 18px;
+}
+.space_bottom_small{
+	padding-bottom: 8px;
+}
+.no_mb{
+	margin-bottom: 0 !important;
+}
+.cat_numb{
+	.row{
+		&:first-child{
+			padding-bottom: 10px;
 		}
 	}
-.inner_page_wrap{
-	background:#fff;
-	display: flex;
 }
-	.sidebar{
-		width: 315px;
-		background:#3d444c;
+
+/*------------garage------------------*/
+.content{
+	h3{
+		color: #000000;
+		font-size: 30px;
+		font-weight: 500;
+		nav{
+			padding: 0 0 0 17px;
+			display: inline-block;
+			a{
+				font-size: 20px;
+				color: #bbbbbd;
+				&.active{
+					color: #007ec4;
+				}
+			}
+		}
 	}
-	.content{
-		padding: 20px 0 20px 30px;
+}
+.checkbox_label{
+	font-size: 15px;
+    color: #3d3d3d;
+    position: relative;
+    font-weight: 500;
+    input{
+    	position: absolute;
+	    left: 0;
+	    top: 0;
+	    height: 100%;
+	    opacity: 0;
+	    &:checked + span{
+			&:before{
+				content: "\f046";
+				color: #007ec4;
+			}
+		}
+    }
+    span{
+    	padding-left: 20px;
+    	margin-right: 21px;
+    	&:before{
+			content: '';
+			@extend .fa;
+			content: "\f096";
+			position: absolute;
+			left: 2px;
+			top: 3px;
+		}
+    }
+}
+
+.filter_wrap{
+	margin-top: 60px;
+	margin-bottom: 44px;
+	padding: 30px 20px;
+	background:#e7e6e9;
+	ul{
+		li{
+			padding-bottom: 20px;
+		}
 	}
+	.btn-default{
+		margin-top: 20px;
+		position: relative;
+		left: -50px;
+	}
+}
+	.search_filter{
+		position: relative;
+		margin-bottom: 27px;
+		input{
+			width: 100%;
+			border: 1px solid #ddddde;
+			height: 42px;
+			border-radius: 5px;
+			background-color: #fff;
+			padding: 0 20px 0 50px;
+			color: #bbbbbe;
+			font-size: 16px;
+		}
+		i{
+			position: absolute;
+			left: 18px;
+			top: 13px;
+			font-size: 16px;
+			color: #007ec4;
+		}
+	}
+	.filter_select{
+		select{
+			width: 298px;
+			box-sizing: border-box;
+			border: 1px solid #ddddde;
+			height: 42px;
+			font-size: 16px;
+			border-radius: 5px;
+			background-color: #fff;
+			padding: 0 15px 0 15px;
+			color: #000000;
+			font-weight: normal;
+		}
+		span{
+			display: inline-block;
+			width: 45px;
+		}
+	}
+.product_wrap{
+	padding-bottom: 45px;
+	h5{
+		font-weight: bold;
+		font-size: 24px;
+		color: #000000;
+		margin-bottom: 30px;
+	}
+}
+	.product_block{
+		@include povh(''); 
+	}
+		.product_item{
+			article{
+				margin-bottom: 19px;
+				@include povh(''); 
+				padding: 5px;
+				border: 1px solid #e1e1e1;
+				border-radius: 5px;
+				img{
+					float: left;
+					padding: 0 25px 0 0;
+				}
+			}
+			h6{
+				font-weight: bold;
+				font-size: 18px;
+				padding-top: 12px;
+			}
+			p{
+				color: #7f7f7f;
+				font-size: 14px;
+				padding: 10px 0 24px 0;
+			}
+			span{
+				color: #7f7f7f;
+				font-size: 14px;
+			}
+			small{
+				display: block;
+				border-radius: 3px;
+				background:#d95648;
+				width: 72px;
+				height: 17px;
+				line-height: 17px;
+				text-align: center;
+				color: #fff;
+				&.red{
+					background:#d95648;
+				}
+				&.green{
+					background:#00b693;
+				}
+				&.grey{
+					background:#bbbbbe;
+				}
+			}
+			section{
+				overflow: hidden;
+			}
+		}
+.product_wrap_small{
+	.product_item{
+		article{
+			border: none;
+		}
+		h6{
+			padding-top: 0;
+		}
+	}
+}
+
+/*------------------------teh--------------------*/
+.product_info{
+	padding: 50px 0 30px 0;
+	h6{
+		color: #7f7f7f;
+		font-size: 14px;
+		font-weight: 500;
+		margin-bottom: 27px;
+	}
+	table{
+		margin-bottom: 25px;
+		width: 100%;
+		td{
+			padding-bottom: 9px;
+			color: #050505;
+			font-size: 16px;
+			&:first-child{
+				color: #050505;
+				font-weight: 500;
+			}
+		}
+	}
+	.change_link{
+		color: #1974ac;
+		font-size: 16px;
+		display: block;
+		//font-weight: 500;
+		margin-bottom: 70px;
+	}
+
+}
+	.status{
+		background:#e7e6e9;
+		padding: 20px;
+		h5{
+			font-size: 22px;
+			color: #007ec4;
+			font-weight: bold;
+			padding-bottom: 12px;
+		}	
+		li{
+			margin-bottom: 12px;
+			font-size: 18px;
+			color: #000000;
+			&.active{
+				font-weight: bold;
+				a i{
+					color: #007ec4;
+				}
+			}
+			a{
+				text-decoration: none;
+			}
+		}
+	}
+.product_info_slider{
+	@include povh('');
+	width: 540px;
+	.bx-next, .bx-prev{
+		background:url(../img/arrow_slider.png) no-repeat center;
+		height: 29px;
+		width: 21px;
+		position: absolute;
+		top: 170px;
+		@include hide-text;
+		opacity: 0.5;
+		&:hover{
+			opacity: 1;
+		}
+	}
+	.bx-next{
+		right: 35px
+	}
+	.bx-prev{
+		left: 35px;
+		@include mirror_flip;
+	}
+	.bx-pager{
+		position: absolute;
+		bottom: 40px;
+		left: 0;
+		width: 100%;
+		text-align: center;
+		a{
+			display: inline-block;
+			border: 2px solid #fff;
+			height: 10px;
+			width: 10px;
+			box-sizing: border-box;
+			@include hide-text;
+			border-radius: 50%;
+			margin: 0 3px;
+			&.active{
+				background:#fff;
+			}
+		}
+		.bx-pager-item{
+			display: inline-block;
+		}
+	}
+}
+
+.capabilities{
+	h3{
+		text-transform: uppercase;
+	}
+}
+.capabilities_inner{
+	padding: 18px 0 45px 0;
+	strong{
+		display: block;
+		color: #007ec4;
+		font-size: 16px;
+		text-transform: uppercase;
+		font-weight: normal;
+	}
+	ul{
+		padding: 10px 0 15px 0;
+		color: #000000;
+		font-size: 16px;
+		line-height: 24px;
+	}
+}
