--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -953,6 +953,12 @@
 /*------------------------teh--------------------*/
 .product_info{
 	padding: 50px 0 30px 0;
+	.btn{
+		color: #fff;
+		&:hover{
+			color: #000;
+		}
+	}
 	h6{
 		color: #7f7f7f;
 		font-size: 14px;
@@ -1071,5 +1077,112 @@
 		color: #000000;
 		font-size: 16px;
 		line-height: 24px;
+	}
+}
+.capabilities_block{
+	padding: 10px 17px;
+	background:#007ec4;
+	height: 125px;
+	margin-bottom: 30px;
+	h6{
+		color: #fff;
+		font-size: 16px;
+		text-transform: uppercase;
+		padding-bottom: 5px;
+		border-bottom: 1px solid #fff;
+		margin-bottom: 9px;
+	}
+	&.grey{
+		background:#d8dadb;
+	}
+	&.lightblue{
+		background:#7fbee1;
+	}
+}
+	.capabilities_item{
+		font-size: 0;
+		text-align: center;
+		vertical-align: top;
+		figure{
+			display: inline-block;
+			vertical-align: top;
+			font-size: 12px;
+			color: #fff;
+			width: 79px;
+			padding: 0 7px;
+			line-height: 1.2;
+			a{
+				text-decoration: none;
+				display: block;
+				text-align: center;
+			}
+			i{
+				font-size: 36px;
+				display: block;
+				padding-bottom: 7px;
+			}
+			&.capabilities_xl{
+				width: 110px;
+			}
+		}
+	}
+.news_wrap{
+	padding: 60px 0 40px 0;
+}
+	.nav_news{
+		padding-bottom: 22px;
+		a{
+			color: #000;
+			text-transform: uppercase;
+			font-size: 16px;
+			text-decoration: none;
+			border-bottom: 2px solid #fff;
+			display: inline-block;
+			padding-bottom: 3px;
+			margin: 0 25px 0 0;
+			&.active, &:hover{
+				color: #007ec4;
+				border-bottom-color: #007ec4;
+			}
+		}
+	}
+	.news_block{
+		color: #050505;
+		font-size: 14px;
+		strong{
+			display: block;
+			padding-bottom: 5px;
+			text-transform: uppercase;
+			font-weight: bold;
+		}
+		small{
+			color: #bbbbbe;
+			display: block;
+			font-size: 12px;
+			padding-top: 5px;
+		}
+		article{
+			padding-bottom: 23px;
+		}
+	}
+.news_bottom{
+	position: relative;
+}	
+.news_list_link{
+	position: absolute;
+	right: 0;
+	top: 111px;
+	width: 200px;
+	color: #000;
+	font-size: 18px;
+	li{
+		padding-bottom: 10px;
+	}
+	a{
+		text-decoration: none;
+		i{
+			padding: 0 11px 0 0;
+		}
+		
 	}
 }
