--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -803,6 +803,8 @@
 	    height: 100%;
 	    opacity: 0;
 	    &:checked + span{
+	    	font-weight: bold;
+	    	color: #000;
 			&:before{
 				content: "\f046";
 				color: #007ec4;
@@ -834,7 +836,7 @@
 		}
 	}
 	.btn-default{
-		margin-top: 0px;
+		margin-top: 35px;
 		position: relative;
 		left: -50px;
 	}
